# django-admin-tabs

./: .python-version  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  search.html
.github/workflows/: pull_request.yml
admin_tabs/: __init__.py  apps.py  checks.py  decorators.py  exceptions.py  filters.py  options.py  views.py
admin_tabs/templates/admin_tabs/admin/: change_list.html  tab_filter.html
docs/: how-to-guides.md  index.md  reference.md
explanation/: index.html
how-to-guides/: index.html
reference/: index.html
search/: search_index.json
tests/: test_decorators.py  test_options.py
tutorials/: index.html
